# zelda-fable-5-high-and-grok-4-5-high

./: .gitignore  Cargo.toml  README.md  index.html  netlify.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/content/: Cargo.toml
crates/content/src/: flags.rs  lib.rs  puzzles.rs  puzzles_dungeon.rs  text.rs
crates/content/src/art/: boss.rs  enemies.rs  enemies_act1b.rs  items.rs  mod.rs  npcs.rs  palette.rs  player_actions.rs  player_base.rs  props_dungeon.rs  props_interior.rs  props_puzzle.rs  props_village.rs  props_wild.rs  tiles.rs  tiles_dungeon.rs  tiles_forest.rs  tiles_terrain.rs  tiles_water.rs  ui.rs  ui_meta.rs
crates/content/src/audio/: mod.rs  music.rs  sfx.rs
crates/content/src/maps/: arena.rs  catalog.rs  dungeon.rs  dungeon_rooms.rs  interiors.rs  mod.rs  (+1 more)
crates/engine/: Cargo.toml
crates/engine/src/: atlas.rs  audio.rs  canvas.rs  chunks.rs  lib.rs  render.rs  save.rs  time.rs
crates/engine/src/audio/: mod.rs  music.rs
crates/engine/src/input/: gamepad.rs  keyboard.rs  mod.rs  touch.rs
crates/game/: Cargo.toml
crates/game/src/: assets.rs  debug.rs  draw_enemies.rs  draw_player.rs  draw_world.rs  events.rs  interact.rs  lib.rs  math.rs  music_director.rs  rooms.rs  save_data.rs  state.rs
docs/: ARCHITECTURE.md  DECISIONS.md  GAME_DESIGN.md  PHASE_PLAN.md  WORKER_BRIEF_PHASE0.md  WORKER_BRIEF_PHASE1A.md  WORKER_BRIEF_PHASE1B.md  WORKER_BRIEF_PHASE2A.md  WORKER_BRIEF_PHASE2B.md  WORKER_BRIEF_PHASE2C.md  WORKER_BRIEF_PHASE3A.md  WORKER_BRIEF_PHASE3B.md  WORKER_BRIEF_PHASE4.md  WORKER_BRIEF_PHASE5.md  WORKER_NOTES.md
(+63 files in other folders)
