[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Element",
  "CssStyleDeclaration",
  "KeyboardEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "Gamepad",
  "GamepadButton",
  "Navigator",
  "Storage",
  "AudioContext",
  "AudioContextState",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "AudioParam",
  "AudioDestinationNode",
  "AudioNode",
  "BaseAudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "Performance",
  "DomRect",
  "EventTarget",
  "Event",
]
